# pytrig

./: .gitignore  Pipfile  README.md  pyproject.toml  pytrig.py
docs/: api.rst  conf.py  index.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
docs/user/: install.rst  quickstart.rst
pytrig/: _precision.py  constants.py  maclaurin_series.py  pi.py  trig.py
pytrig/tests/: test_trig.py
