[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrig"
version = "0.2.0"
authors = [
    { name = "Jacob Lee", email = "Jacob.J.Lee@outlook.com" }
]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/JacobLee23/pytrig"
"Issue Tracker" = "https://github.com/Jacoblee23/pytrig/issues/"

[tools.setuptools]
py-modules = ["pytrig"]
